--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Práctica 2</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Práctica 2</h1>
     <p>Miguel Angel Moreno Velasquez</p>
-</body>
+    <p>Ingeniería en Tecnologías de la Información</p>
+    <p>11° A</p>
+  </body>
 </html>
