--- a/index.html
+++ b/index.html
@@ -11,5 +11,10 @@
     <p>Miguel Angel Moreno Velasquez</p>
     <p>Ingeniería en Tecnologías de la Información</p>
     <p>11° A</p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores saepe
+      quasi sed est cum. Eius est et illo fugiat inventore dicta tenetur
+      consectetur repudiandae mollitia similique molestias enim, voluptate ad?
+    </p>
   </body>
 </html>
