--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     <p>Miguel Angel Moreno Velasquez</p>
     <p>Ingeniería en Tecnologías de la Información</p>
     <p>11° A</p>
+    <p>
+      Texto diferente
+    </p>
   </body>
 </html>
